--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  border: 1px solid #ccc;
+  border: 5px solid #ccc;
   border-top: none;
 }
 
@@ -52,4 +52,26 @@
 
 .suggestion-list li:hover {
   background-color: #f5f5f5;
+}
+
+.navbar-expand-lg {
+  background-color: #ffffff;
+  height: 100px;
+  border-width: 0px 0px 6px 0px;
+  border-image: repeating-linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.05) 10%);
+  border-image-slice: 9;
+  border-style: solid;
+}
+
+.login-button {
+  width: 160px;
+  height: 70px;
+  background-color: #00BF63;
+  right: 300px;
+  font-family: 'Helvetica';
+  font-weight: bold;
+  font-size: large;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
 }
