--- a/src/App.css
+++ b/src/App.css
@@ -63,15 +63,35 @@
   border-style: solid;
 }
 
-.login-button {
+.navbar-logo {
+  width: 160px;
+  height: 160px;
+}
+
+.green-button {
   width: 160px;
   height: 70px;
   background-color: #00BF63;
-  right: 300px;
   font-family: 'Helvetica';
   font-weight: bold;
   font-size: large;
   color: #ffffff;
   border: none;
   border-radius: 10px;
+  right: 30px;
+  top: 50%;
+  transform: translate(0%, -50%);
+  position: absolute;
+}
+
+.form-div {
+  width: 500px;
+  height: 3000px;
+  border-width: 0px 10px 0px 10px;
+  border-image: repeating-linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.05) 2%, rgba(0,0,0,0.5) 4%);
+  border-image-slice: 9;
+  border-style: solid;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
