--- a/src/components/common/UserLink/userLink.css
+++ b/src/components/common/UserLink/userLink.css
@@ -1,13 +1,4 @@
 .ofertapp-link-base {
-    margin: auto;
-}
-
-.ofertapp-link-common {
-    align-self: center;
-    margin: auto;
-}
-
-.ofertapp-link-base a {
     padding: 0px !important;
     color: #000;
     text-decoration: none;
@@ -17,9 +8,13 @@
 
     font-family: 'Inter';
     font-style: "normal";
+
+    margin: auto;
+
+    overflow-wrap: break-word !important;
 }
 
-.ofertapp-link-common a {
+.ofertapp-link-common {
     padding: 0px !important;
     color: #2AC11D;
     text-decoration: none;
@@ -28,6 +23,11 @@
 
     font-family: 'Inter';
     font-style: "normal";
+
+    align-self: center;
+    margin: auto;
+
+    overflow-wrap: break-word !important;
 }
 
 .ofertapp-reputation {
@@ -47,21 +47,41 @@
     border-color: #000;
     background-color: #00BF63;
     border-radius: 10px;
+
+    overflow-wrap: break-word !important;
 }
 
-.ofertapp-user-info-tooltip>.tooltip-arrow {}
-
-.ofertapp-user-info-tooltip .ofertapp-user-info-profile-picture {
-    border-radius: 10px;
+.ofertapp-user-info-tooltip .ofertapp-user-info-profile {
     background-color: #fff;
-    max-width: 100% !important;
+    border-radius: 10px;
+    padding: 0px;
+
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+.ofertapp-user-info-tooltip .ofertapp-user-info-profile .ofertapp-user-info-profile-image {
+    border-radius: 10px;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
     max-height: 200px !important;
 
-    padding: 1px;
-    z-index: 0;
+    background-color: #fff;
 }
 
-.ofertapp-user-info-tooltip .ofertapp-user-info-text {
+.ofertapp-user-info-tooltip .ofertapp-user-info-profile .ofertapp-user-info-profile-text {
+    font-size: 20px;
+    font-weight: 600;
+    background-color: #fff;
+    color: #000;
+    text-align: left;
+    margin: auto;
+
+    overflow-wrap: break-word !important;
+}
+
+.ofertapp-user-info-text {
     font-size: 12px;
     font-weight: 600;
     background-color: #000;
@@ -71,4 +91,6 @@
     text-align: center;
     z-index: 1;
     margin: auto;
+
+    overflow-wrap: break-word !important;
 }
