--- a/src/App.css
+++ b/src/App.css
@@ -51,37 +51,7 @@
 }
 
 .suggestion-list li:hover {
-  background-color: #f5f5f5;
-}
-
-.navbar-expand-lg {
-  background-color: #ffffff;
-  height: 100px;
-  border-width: 0px 0px 6px 0px;
-  border-image: repeating-linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.05) 10%);
-  border-image-slice: 9;
-  border-style: solid;
-}
-
-.navbar-logo {
-  width: 160px;
-  height: 160px;
-}
-
-.green-button {
-  width: 160px;
-  height: 70px;
-  background-color: #00BF63;
-  font-family: 'Helvetica';
-  font-weight: bold;
-  font-size: large;
-  color: #ffffff;
-  border: none;
-  border-radius: 10px;
-  right: 30px;
-  top: 50%;
-  transform: translate(0%, -50%);
-  position: absolute;
+  background-color: #bdbdbd;
 }
 
 .form-div {
