--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -56,9 +57,9 @@
 
 .form-div {
   width: max(500px, 40vw);
-  height: 3000px;
+  max-height: 3000px;
   border-width: 0px 10px 0px 10px;
-  border-image: repeating-linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.05) 2%, rgba(0,0,0,0.5) 4%);
+  border-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.05) 2%, rgba(0, 0, 0, 0.5) 4%);
   border-image-slice: 9;
   border-style: solid;
   position: relative;
@@ -93,5 +94,5 @@
   font-family: 'Inter' !important;
   font-weight: bolder !important;
   color: #bdbdbd !important;
-  font-size: 60px !important;
+  font-size: 40px !important;
 }
