--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -1,45 +1,55 @@
 .navbar-expand-lg {
     background-color: #ffffff;
-    height: 100px;
-    border-width: 0px 0px 6px 0px;
-    border-image: repeating-linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.05) 10%);
+    border-image: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.05) 10%);
+    border-left-style: none;
+    border-right-style: none;
     border-image-slice: 9;
-    border-style: solid;
-    justify-content: space-between !important;
-  }
+    border-bottom-style: solid;
+    border-bottom-width: 5px;
+    justify-content: left !important;
+    margin-bottom: 20px;
+}
 
-.navbar-nav {
-    flex-direction: row !important;
-    width: min(max(40vw, 200px), 500px);
-    height: 90px;
+.ofertapp-collapse {
+    flex-grow: 0 !important;
+    margin: 0px 0px 0px 0px !important;
+    padding: 0px 0px 0px 0px !important;
 }
 
 .nav-item {
     text-align: center !important;
-    border-width: 0px 0px 0px 1px;
-    border-style: solid;
-    border-image: linear-gradient(to top, rgba(255,255,255,1) 15%, rgba(0,0,0,0.6) 50%, rgba(255,255,255,1) 85%);
+    border-width: 0px 0px 0px 0px;
+    border-image: linear-gradient(to top, rgba(255, 255, 255, 1) 15%, rgba(0, 0, 0, 0.6) 50%, rgba(255, 255, 255, 1) 85%);
     border-image-slice: 9;
+    vertical-align: middle !important;
+    padding: auto;
+    display: flex;
+    border-style: solid;
+    margin-left: 20px;
+}
+
+.nav-item.ofertapp-item:hover {
+    background-color: #00BF63 !important;
+    color: rgba(255, 255, 255, 1) !important;
 }
 
 .nav-link {
     position: relative;
-    top: 50%;
-    transform: translate(0%, -50%);
+    margin: auto;
+    color: inherit !important;
 }
+
 
 .simple-space {
     border-width: 0px 0px 0px 0px;
 }
 
 .navbar-logo {
-    width: 160px;
-    height: 160px;
+    max-width: 160px;
+    max-height: 120px;
 }
 
 .green-button {
-    width: 160px;
-    height: 70px;
     background-color: #00BF63;
     font-family: 'Inter';
     font-weight: bold;
@@ -47,4 +57,30 @@
     color: #ffffff;
     border: none;
     border-radius: 10px;
+    padding: 10px 20px 10px 20px;
+    margin: auto !important;
+}
+
+.ofertapp-navbar-profile-picture {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #00BF63;
+}
+
+.ofertapp-dropdown-menu {
+    background-color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    margin-right: auto;
+}
+
+.ofertapp-navbar-profile-name {
+    font-family: 'Inter';
+    font-weight: bold;
+    font-size: large;
+    color: #00BF63;
 }
