--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -62,12 +62,14 @@
 }
 
 .ofertapp-navbar-profile-picture {
-    width: 50px;
+    width: 50px !important;
     height: 50px;
     border-radius: 50%;
     border-style: solid;
     border-width: 4px;
     border-color: #00BF63;
+    margin: auto !important;
+    padding: 0;
 }
 
 .ofertapp-dropdown-menu {
@@ -83,4 +85,5 @@
     font-weight: bold;
     font-size: large;
     color: #00BF63;
+    margin-top: 20%;
 }
