Improved reactions dynamic, backend connection is the only stuff missing on this side

--- a/src/components/common/Comment/comment.css
+++ b/src/components/common/Comment/comment.css
@@ -13,6 +13,8 @@
     background-color: #fff;
 
     margin-right: 10px !important;
+
+    cursor: pointer;
 }
 
 .ofertapp-reaction-container {
@@ -28,6 +30,8 @@
     font-size: 14px !important;
 
     overflow-wrap: break-word !important;
+
+    cursor: pointer;
 }
 
 .ofertapp-comment-text {
@@ -53,4 +57,9 @@
     text-align: right;
     font-family: 'Inter';
     font-style: "normal";
+}
+
+.ofertapp-reaction-active {
+    background-color: #000;
+    color: #fff;
 }
