--- a/src/components/login/loginForm.css
+++ b/src/components/login/loginForm.css
@@ -21,7 +21,7 @@ label {
 
 .group-form {
     width: 100%;
-    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
 }
 
 #login-form {
@@ -35,10 +35,19 @@ label {
     align-self: flex-start;
 }
 
+#reset-password-login {
+    margin-top: 0.5rem;
+    text-decoration: none;
+}
+
 a {
     display: block;
     font-size: 1.1rem;
     margin-bottom: 0.5rem;
+}
+
+.login-button {
+    width: 100% !important;
 }
 
 
