--- a/src/components/login/loginForm.css
+++ b/src/components/login/loginForm.css
@@ -1,58 +1,74 @@
 body {
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: blue;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: blue;
 }
 
-
 .login-title {
-    font-weight: bolder;
-    color: #595757;
-    font-size: 3rem;
+  font-weight: bolder;
+  color: #595757;
+  font-size: 3rem;
 }
 
 label {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.3rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.3rem;
 }
 
 .group-form {
-    width: 100%;
-    margin-top: 1.5rem;
+  width: 100%;
+  margin-top: 0.4rem;
 }
 
 #login-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .login-links {
-    align-self: flex-start;
+  align-self: flex-start;
 }
 
 #reset-password-login {
-    margin-top: 0.5rem;
-    text-decoration: none;
+  margin-top: 0;
+}
+
+#register-user-login {
+  margin-top: 0.4rem;
 }
 
 a {
-    display: block;
-    font-size: 1.1rem;
-    margin-bottom: 0.5rem;
+  display: block;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+  text-decoration: none !important;
 }
 
 .login-button {
-    width: 100% !important;
+  width: 100% !important;
 }
 
-
 input {
-    width: 100%;
-    border-radius: 9px;
-    border-color: #595757;
+  width: 100%;
+  border-radius: 9px;
+  border-color: #595757;
+}
+
+.error-div {
+  margin-bottom: 0 !important;
+  color: red;
+}
+
+.error-input {
+  border-color: red !important;
+  background-image: url("../../images/errorIcon.png");
+  background-size: 6%;
+  background-position: right center;
+  background-repeat: no-repeat;
 }
