--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,15 @@
   pointer-events: none;
 }
 
+html,
 body {
-  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100vh !important;
+  display: flex !important;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -63,7 +70,12 @@ body {
   width: max(500px, 40vw);
   max-height: 3000px;
   border-width: 0px 10px 0px 10px;
-  border-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.05) 2%, rgba(0, 0, 0, 0.5) 4%);
+  border-image: repeating-linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0.05) 2%,
+    rgba(0, 0, 0, 0.5) 4%
+  );
   border-image-slice: 9;
   border-style: solid;
   position: relative;
@@ -72,7 +84,7 @@ body {
 }
 
 .form-label {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-weight: bold;
   font-size: large;
 }
@@ -84,8 +96,8 @@ body {
 }
 
 .btn-form {
-  background-color: #00BF63 !important;
-  font-family: 'Inter' !important;
+  background-color: #00bf63 !important;
+  font-family: "Inter" !important;
   font-weight: bold !important;
   font-size: x-large !important;
   color: #ffffff !important;
@@ -94,19 +106,25 @@ body {
   max-width: 200px !important;
 }
 
-
-
 .ofertapp-page-link {
   background-color: #fff !important;
-  color: #00BF63 !important;
+  color: #00bf63 !important;
 }
 
 .ofertapp-page-link:hover {
-  background-color: #00BF63 !important;
+  background-color: #00bf63 !important;
   color: #fff !important;
 }
 
 .ofertapp-page-item-active.ofertapp-page-link {
-  background-color: #00BF63 !important;
+  background-color: #00bf63 !important;
   color: #fff !important;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: #00bf63;
 }
