--- a/src/components/login/loginForm.css
+++ b/src/components/login/loginForm.css
@@ -1,21 +1,33 @@
-body {
-  display: flex;
+.login-page {
   height: 100vh;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+.Input label {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.3rem;
+}
+
+.Input input {
+  width: 100%;
+  border-radius: 9px;
+  border-color: #595757;
+}
+
+.Link {
+  display: block;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+  text-decoration: none !important;
+}
+
 .login-title {
   font-weight: bolder;
   color: #595757;
   font-size: 3rem;
-}
-
-label {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.3rem;
 }
 
 .group-form {
@@ -42,32 +54,6 @@ label {
   margin-top: 0.4rem;
 }
 
-a {
-  display: block;
-  font-size: 1.1rem;
-  margin-bottom: 0.5rem;
-  text-decoration: none !important;
-}
-
 .login-button {
   width: 100% !important;
-}
-
-input {
-  width: 100%;
-  border-radius: 9px;
-  border-color: #595757;
-}
-
-.error-div {
-  margin-bottom: 0 !important;
-  color: red;
-}
-
-.error-input {
-  border-color: red !important;
-  background-image: url("../../images/errorIcon.png");
-  background-size: 6%;
-  background-position: right center;
-  background-repeat: no-repeat;
 }
