--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   height: 40vmin;
   pointer-events: none;
 }
-1
 
 #root {
   height: 100%;
@@ -64,12 +63,10 @@
   width: max(500px, 40vw);
   max-height: 3000px;
   border-width: 0px 10px 0px 10px;
-  border-image: repeating-linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0.05) 2%,
-    rgba(0, 0, 0, 0.5) 4%
-  );
+  border-image: repeating-linear-gradient(90deg,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.05) 2%,
+      rgba(0, 0, 0, 0.5) 4%);
   border-image-slice: 9;
   border-style: solid;
   position: relative;
