--- a/src/components/common/FileUpload/fileUpload.css
+++ b/src/components/common/FileUpload/fileUpload.css
@@ -4,3 +4,9 @@
     border-radius: 50%;
     border: 1px solid #ddd;
 }
+
+.label-style {
+    font-family: 'Inter';
+    font-style: "normal";
+    margin-bottom: 30px;
+}
