--- a/src/components/Main Page/mainPage.css
+++ b/src/components/Main Page/mainPage.css
@@ -63,3 +63,10 @@
     padding: 10px;
     margin: 10px;
 }
+
+.ofertapp-no-publications {
+    color: #00BF63;
+    font-size: 24px;
+    font-family: 'Inter';
+    font-style: "normal";
+}
