--- a/src/components/Publication/publicationView.css
+++ b/src/components/Publication/publicationView.css
@@ -15,6 +15,12 @@
     font-style: "normal";
 }
 
+.ofertapp-creation-column {
+    padding-right: 50px !important;
+    padding-left: 50px !important;
+    margin: auto;
+}
+
 .ofertapp-inspirational-message {
     color: #00BF63;
     font-size: 25px;
