--- a/src/components/common/Button/button.css
+++ b/src/components/common/Button/button.css
@@ -5,7 +5,7 @@
     font-weight: 600 !important;
     border-radius: 10px;
     margin-bottom: 10px;
-    width: 50% !important;
+    width: var(--width) !important;
     margin: auto !important;
 }
 
