--- a/src/components/common/Transaction/transaction.css
+++ b/src/components/common/Transaction/transaction.css
@@ -1,6 +1,6 @@
 .ofertapp-table-item {
-    background-color: #fff;
-    color: #000;
+    background-color: var(--ofertapp-general-background-color);
+    color: var(--ofertapp-general-text-color);
     font-size: 12px;
     font-family: 'Inter';
     font-style: "normal";
