--- a/src/components/Admins/adminsControls.css
+++ b/src/components/Admins/adminsControls.css
@@ -3,5 +3,5 @@
     font-weight: 600;
     margin-bottom: 1rem;
     text-align: center;
-    color: #000;
+    color: var(--ofertapp-general-text-color);
 }
