--- a/src/components/FinancialTransactions/financialTransactions.css
+++ b/src/components/FinancialTransactions/financialTransactions.css
@@ -1,7 +1,7 @@
 .ofertapp-page-title {
     font-size: 48px;
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.466);
+    color: var(--ofertapp-page-title-text-color);
 
     padding-bottom: 20px;
     padding-left: 40px;
@@ -10,7 +10,7 @@
 
     text-align: left;
     border-bottom-style: solid;
-    border-bottom-color: #000000;
+    border-bottom-color: var(--ofertapp-border-color);
     font-family: 'Inter';
     font-style: "normal";
 }
@@ -18,19 +18,7 @@
 .ofertapp-page-subtitle {
     font-size: 32px;
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.7);
-
-    padding-bottom: 10px;
-
-    text-align: center;
-    font-family: 'Inter';
-    font-style: "normal";
-}
-
-.ofertapp-converted-result {
-    font-size: 24px;
-    font-weight: bold;
-    color: rgba(0, 0, 0, 0.466);
+    color: var(--ofertapp-page-title-text-color);
 
     padding-bottom: 10px;
 
@@ -61,6 +49,6 @@
 }
 
 .ofertapp-tab-choice.active {
-    background-color: #FFFFFF;
+    background-color: var(--ofertapp-general-background-color);
     color: #00BF63;
 }
