--- a/src/components/OfertAppTeam/ofertapp-team.css
+++ b/src/components/OfertAppTeam/ofertapp-team.css
@@ -1,6 +1,6 @@
 .ofertapp-team-div {
     /*background-color: rgb(0, 191, 99, 0.8);*/
-    background-color: rgb(0, 0, 0, 0.2);
+    background-color: var(--ofertapp-credits-background-color);
     margin-top: 30px !important;
 }
 
