--- a/src/components/Statistics/statistics.css
+++ b/src/components/Statistics/statistics.css
@@ -1,7 +1,7 @@
 .ofertapp-page-title {
     font-size: 48px;
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.466);
+    color: var(--ofertapp-page-title-text-color);
 
     padding-bottom: 20px;
     padding-left: 40px;
@@ -10,16 +10,16 @@
 
     text-align: left;
     border-bottom-style: solid;
-    border-bottom-color: #000000;
+    border-bottom-color: var(--ofertapp-border-color);
     font-family: 'Inter';
     font-style: "normal";
 }
 
 .ofertapp-stats-value {
-    color: #000;
+    color: var(--ofertapp-general-text-color);
     font-family: 'Inter';
     font-style: "normal";
-    border-color: black;
+    border-color: var(--ofertapp-border-color);
     border-style: solid;
     border-width: 2px;
     border-radius: 20px;
@@ -48,7 +48,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 39px;
-    color: #000;
+    color: var(--ofertapp-general-text-color);
     margin-bottom: 10px;
     text-align: center;
     font-family: 'Inter';
