--- a/src/components/UserInfoEdit/userInfoEdit.css
+++ b/src/components/UserInfoEdit/userInfoEdit.css
@@ -1,7 +1,7 @@
 .ofertapp-page-title {
     font-size: 48px;
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.466);
+    color: var(--ofertapp-general-text-color);
 
     padding-bottom: 20px;
     padding-left: 40px;
@@ -10,7 +10,7 @@
 
     text-align: left;
     border-bottom-style: solid;
-    border-bottom-color: #000000;
+    border-bottom-color: var(--ofertapp-border-color);
     font-family: 'Inter';
     font-style: "normal";
 }
