--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -1,5 +1,5 @@
 .navbar-expand-lg {
-    background-color: #ffffff;
+    background-color: var(--ofertapp-general-background-color);
     border-image: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.05) 10%);
     border-left-style: none;
     border-right-style: none;
@@ -26,11 +26,12 @@
     display: flex;
     border-style: solid;
     margin-left: 20px;
+    color: var(--ofertapp-general-text-color) !important;
 }
 
 .nav-item.ofertapp-item:hover {
     background-color: #00BF63 !important;
-    color: rgba(255, 255, 255, 1) !important;
+    color: var(--ofertapp-inverse-text-color) !important;
 }
 
 .nav-link {
@@ -73,7 +74,7 @@
 }
 
 .ofertapp-dropdown-menu {
-    background-color: #ffffff;
+    background-color: var(--ofertapp-general-background-color);
     border: none;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
@@ -90,7 +91,7 @@
 
 .notification-holder {
     --bs-dropdown-min-width: 500px !important;
-    
+
     max-height: 400px;
     max-width: 500px;
     overflow-y: scroll;
