added loading icon for multiple buttons

--- a/src/components/common/Button/button.css
+++ b/src/components/common/Button/button.css
@@ -34,3 +34,7 @@
 .ofertapp-registration-column .ofertapp-button-primary:focus + .register-loading{
     display: inline-block !important;
 }
+
+.ofertapp-pub-filter-divider .ofertapp-button-primary:focus + .register-loading{
+    display: inline-block !important;
+}
