--- a/src/components/OfertAppTeam/ofertapp-team.css
+++ b/src/components/OfertAppTeam/ofertapp-team.css
@@ -40,3 +40,45 @@
     border-bottom-color: #000;
     padding-bottom: 10px;
 }
+
+.ofertapp-member-background {
+    background-color: var(--ofertapp-general-background-color);
+    color: var(--ofertapp-general-text-color);
+    font-size: 9px;
+    overflow-y: scroll;
+    font-family: 'Inter';
+    font-style: "normal";
+    font-weight: 400;
+    border-radius: 10px;
+    max-height: 300px;
+    padding: 10px;
+}
+
+.ofertapp-member-card {
+    background-color: #00BF63;
+    padding-left: 10px !important;
+    padding-right: 0px !important;
+    border-radius: 10px;
+    border-color: var(--ofertapp-border-color);
+}
+
+.ofertapp-member-img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.ofertapp-member-tooltip>.tooltip-inner {
+    border-style: solid;
+    border-color: var(--ofertapp-border-color);
+    background-color: #00BF63;
+    border-radius: 10px;
+
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+
+    overflow-wrap: break-word !important;
+
+}
