--- a/src/components/Statistics/statistics.css
+++ b/src/components/Statistics/statistics.css
@@ -30,7 +30,7 @@
 .ofertapp-statistics-subtitle {
     font-size: 36px;
     font-weight: bold;
-    color: #00BF63;
+    color: #017C41;
     margin-top: 10px;
     margin-bottom: 10px;
 
@@ -57,7 +57,7 @@
 
 .ofertapp-bottomline {
     border-bottom-style: solid;
-    border-bottom-color: #00BF63;
+    border-bottom-color: #017C41;
     padding-bottom: 20px;
 
     margin-bottom: 20px;
