--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@
 }
 
 .btn-form {
-  background-color: #00bf63 !important;
+  background-color: #017C41 !important;
   font-family: "Inter" !important;
   font-weight: bold !important;
   font-size: x-large !important;
@@ -102,16 +102,16 @@
 
 .ofertapp-page-link {
   background-color: var(--ofertapp-general-background-color) !important;
-  color: #00bf63 !important;
+  color: #017C41 !important;
 }
 
 .ofertapp-page-link:hover {
-  background-color: #00bf63 !important;
+  background-color: #017C41 !important;
   color: #fff !important;
 }
 
 .ofertapp-page-item-active.ofertapp-page-link {
-  background-color: #00bf63 !important;
+  background-color: #017C41 !important;
   color: #fff !important;
 }
 
@@ -120,7 +120,7 @@
   bottom: 0;
   width: 100%;
   height: 5rem;
-  background-color: #00bf63;
+  background-color: #017C41;
 }
 
 .error-div {
