--- a/src/components/UserInfoEdit/userInfoEdit.css
+++ b/src/components/UserInfoEdit/userInfoEdit.css
@@ -22,7 +22,7 @@
 }
 
 .ofertapp-inspirational-message {
-    color: #00BF63;
+    color: #017C41;
     font-size: 25px;
 
     font-family: 'Inter';
@@ -32,7 +32,7 @@
 }
 
 .ofertapp-div-hline {
-    border-bottom-color: #00BF63;
+    border-bottom-color: #017C41;
     border-bottom-width: 1px;
     border-bottom-style: solid;
 
