--- a/src/components/common/Notification/notification.css
+++ b/src/components/common/Notification/notification.css
@@ -10,7 +10,7 @@
     border-style: solid;
     border-width: 2px !important;
     border-radius: 7px !important;
-    border-color: #00BF63 !important;
+    border-color: #017C41 !important;
 }
 
 .notification-read {
